# ffsdlplayer

./: readme.md
_prototype/01_observer_reader/: CMakeLists.txt
_prototype/01_observer_reader/main/: CMakeLists.txt  globalstate.cpp  globalstate.h  main.cpp  packetqueue.cpp  subject.h  videocontroller.cpp  videocontroller.h  videoreader.cpp  videoreader.h
_prototype/02_observer_read_decode/: CMakeLists.txt  _build.sh  readme.md
_prototype/02_observer_read_decode/main/: CMakeLists.txt  globalstate.cpp  globalstate.h  main.cpp  videocontroller.cpp  videocontroller.h  videodecoder.cpp  videodecoder.h  videoreader.cpp  videoreader.h
_prototype/03_observer_read_decode_render/01_primary_secondary/: CMakeLists.txt  readme.md
_prototype/03_observer_read_decode_render/02_primary_only/: CMakeLists.txt
_prototype/04_playlist_player/: CMakeLists.txt
_prototype/04_playlist_player/main/: CMakeLists.txt  framequeue.cpp  framequeue.hpp  globalstate.cpp  globalstate.hpp  main.cpp  myavpacketlist.hpp  observer.hpp  packetqueue.cpp  packetqueue.hpp  stringhelper.hpp  subject.cpp  videocontroller.cpp  (+7 more)
src/: CMakeLists.txt
src/main/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  globalstate.h  main.cpp  myavpacketlist.h  packetqueue.h  stringhelper.h  subject.h  videocontroller.cpp  videocontroller.h  videodecoder.cpp  videodecoder.h  videoreader.cpp  videoreader.h  videorenderer.cpp  videorenderer.h  videostate.cpp  videostate.h
test/01_observer_reader/: CMakeLists.txt
test/02_observer_read_decode/: CMakeLists.txt
test/03_observer_read_decode_render/: CMakeLists.txt
(+82 files in other folders)
